--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <hr />
 
  <a href="./public/about.html">About me</a> 
- <a href="./contact.html">Contact me</a>
+ <a href="./public/contact.html">Contact me</a>
 <body>
     
 </body>
